src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_pipe_vs_closure.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 13,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Closure {
                                            is_move: false,
                                            params: [
                                                ClosureParam {
                                                    pattern: Pattern {
                                                        kind: Ident {
                                                            by_ref: false,
                                                            mutable: false,
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 18,
                                                                    end: 19,
                                                                    start_line: 1,
                                                                    start_col: 19,
                                                                },
                                                            },
                                                            subpattern: None,
                                                        },
                                                        span: Span {
                                                            start: 18,
                                                            end: 19,
                                                            start_line: 1,
                                                            start_col: 19,
                                                        },
                                                    },
                                                    ty: None,
                                                    span: Span {
                                                        start: 18,
                                                        end: 19,
                                                        start_line: 1,
                                                        start_col: 19,
                                                    },
                                                },
                                            ],
                                            return_type: None,
                                            effects: None,
                                            body: Expr {
                                                kind: Binary {
                                                    op: BitOr,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 21,
                                                                                end: 22,
                                                                                start_line: 1,
                                                                                start_col: 22,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 21,
                                                                    end: 22,
                                                                    start_line: 1,
                                                                    start_col: 22,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 21,
                                                            end: 22,
                                                            start_line: 1,
                                                            start_col: 22,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 25,
                                                                                end: 26,
                                                                                start_line: 1,
                                                                                start_col: 26,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 25,
                                                                    end: 26,
                                                                    start_line: 1,
                                                                    start_col: 26,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 25,
                                                            end: 26,
                                                            start_line: 1,
                                                            start_col: 26,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 21,
                                                    end: 26,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 17,
                                            end: 26,
                                            start_line: 1,
                                            start_col: 18,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 27,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 29,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 29,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 29,
        start_line: 1,
        start_col: 1,
    },
}
