src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_precedence_deref_vs_field.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Unary {
                                    op: Deref,
                                    operand: Expr {
                                        kind: Field {
                                            base: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 10,
                                                                        end: 13,
                                                                        start_line: 1,
                                                                        start_col: 11,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 10,
                                                            end: 13,
                                                            start_line: 1,
                                                            start_col: 11,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 10,
                                                    end: 13,
                                                    start_line: 1,
                                                    start_col: 11,
                                                },
                                            },
                                            field: Named(
                                                Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 14,
                                                        end: 18,
                                                        start_line: 1,
                                                        start_col: 15,
                                                    },
                                                },
                                            ),
                                        },
                                        span: Span {
                                            start: 10,
                                            end: 18,
                                            start_line: 1,
                                            start_col: 11,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 18,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 20,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 20,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 20,
        start_line: 1,
        start_col: 1,
    },
}
